app/assets/stylesheets/events/_show.scss
.event-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 5% 80px;

  .event-details {
    width: 75%;
    margin: 80px;
    background-color: $beige;
    padding: 48px;
    position: relative;
    display: flex;

    .event-info {
      width: 80%;

      #event-title {
        font-size: 3rem;
      }

      #event-time-location {
        font-size: 1rem;
        color: rgba(0, 0, 0, 0.4);
      }

      #event-description {
        font-size: 1.5rem;
      }
    }

    .event-host {
      display: flex;
      flex-direction: column;
      align-items: center;

      .host-title {
        font-size: 3rem;
      }

      .host-avatar {
        width: 250px;
        height: 320px;
        background-color: $white;
        border: solid 1.5px black;
        background-size: cover;
        margin-bottom: 24px;
        display: flex;
        justify-content: center;
        align-items: center;
        font-size: 8rem;
      }

      .host-name {
        font-size: 1.5rem;
        width: fit-content;
      }
    }

    #event-edit-delete {
      position: absolute;
      top: 16px;
      right: 16px;
      a {
        color: black;
        padding: 0 5px;
        &:hover {
          text-decoration: none;
        }
      }
    }
  }

  .event-guest-map {
    background-color: $beige;
    border-radius: 2px;
    padding: 48px;
    width: 75%;
    display: flex;
    margin-bottom: 80px;

    .guest-list {
      background-color: $black;
      padding: 42px;
      display: flex;
      flex-direction: column;
      .guest-cards {
        background-color: $white;
        border-radius: 2px;
        height: 400px;
        width: 300px;
        position: relative;
        // temporary
        color: $black;
        display: flex;
        justify-content: center;
        align-items: center;
        font-size: 2rem;
      }
    }

    div.guest-cards img {
      position: absolute;
      object-fit: cover;
      top: 0;
      left: 0;
      height: 400px;
      width: 300px;
    }

    .guest-name {
      margin: 12px 42px;
      align-self: center;
      font-size: 1.5rem;
      color: $white;
    }

    .mapboxgl-canvas {
      padding-left: 15px;
      height: 800px;
      border-radius: 2px;
    }

    .list-button {
      width: fit-content;
      align-self: center;
      &:hover {
        background-color: $white;
        color: $black;
      }
    }

    .invite-modal {
      display: none; /* Hidden by default */
      position: fixed; /* Stay in place */
      z-index: 3; /* Sit on top */
      left: 0;
      top: 0;
      width: 100%; /* Full width */
      height: 100%; /* Full height */
      overflow: auto; /* Enable scroll if needed */
      background-color: rgb(0, 0, 0); /* Fallback color */
      background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
      justify-content: center;
      align-items: center;
    }

    /* Modal Content */
    .invite-content {
      background-color: $beige;
      margin: auto;
      padding: 40px;
      border: 1px solid #888;
      width: 30%;
      position: relative;
      border: solid 1.5px black;

      .invite-email-input {
        border: 1.5px solid black;
        background-color: $white;
        margin-bottom: 16px;

        .simple_form {
          display: flex;
        }

        .invitation_receiver_email {
          width: 90%;
          margin: 0;
        }

        .form-control {
          border: none;
          border-radius: 0;
          background-color: $white;
          &:focus {
            box-shadow: none;
          }
        }

        .invite-button {
          padding: 0;
          width: 10%;
          border: none;
          background-color: $white;
          outline: 0;
          &:hover {
            font-size: 1.2rem;
          }
        }
      }

      .invitee {
        display: flex;
        margin-bottom: 8px;

        .invitee-mail {
          font-size: 1.2rem;
          flex-grow: 1;
        }

        .invitee-status {
          align-self: center;

          .invitation-status-pending,
          .invitation-status-accepted,
          .invitation-status-declined {
            border: 1.5px solid black;
            width: 90px;
            display: flex;
            justify-content: center;
            font-size: 0.8rem;
            color: $black;
            font-weight: 700;
          }

          .invitation-status-pending {
            background-color: $white;
          }

          .invitation-status-accepted {
            background-color: $green;
          }

          .invitation-status-declined {
            background-color: $red;
          }
        }

        .invite-delete {
          display: flex;
          align-items: center;
          a {
            color: $black;
            align-self: center;
            margin-left: 12px;
          }
        }
      }

      #close-button {
        background-color: $beige;
        border: none;
        position: absolute;
        top: 8px;
        right: 8px;
        outline: 0;
        i {
          font-size: 1.5rem;
        }
      }
    }
  }
  .playlist {
    display: flex;
    flex-grow: 1;
    width: 100%;
    height: 100%;
  }

  .location-map {
    width: 100%;
    background-color: #000000;
    height: inherit;
    margin-left: 42px;
    color: $white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 5rem;
  }

  .event-items-playlist {
    background-color: $beige;
    padding: 48px;
    width: 75%;
    display: flex;
    margin-bottom: 80px;

    .bring-list {
      background-color: $black;
      height: 500px;
      width: 60%;
      padding: 42px;
      display: flex;
      flex-direction: column;
      align-items: center;

      .items {
        height: 80%;
        background-color: $white;
        width: 100%;
        margin-bottom: auto;
      }

      .bring-form {
        display: flex;
        width: 100%;
        #item-input {
          border: none;
          height: 48px;
          width: 90%;
          padding: 8px 16px;
          font-size: 1.3rem;
        }
        .add-item {
          background-color: $white;
          width: 10%;
          display: flex;
          justify-content: center;
          align-items: center;
          a {
            display: flex;
            justify-content: center;
            align-items: center;
            width: 100%;
            font-size: 2rem;
            color: $black;
            &:hover {
              text-decoration: none;
            }
          }
        }
      }
    }

    .playlist {
      background-color: $black;
      height: 500px;
      width: 30%;
      margin-left: auto;
      // This si temporary until we have the playlist
      display: flex;
      align-items: center;
      justify-content: center;
      color: $white;
      font-size: 3rem;
    }
  }

  .event-chat {
    background-color: $beige;
    padding: 48px;
    width: 75%;
    display: flex;
    flex-direction: column;

    .chat-box {
      height: 500px;
      width: 100%;
      background-color: $white;
      border: 1.5px solid black;
      margin-bottom: 32px;
    }
    .chat-form {
      display: flex;
      width: 100%;
      border: 1.5px solid black;
      background-color: $white;
      #chat-input {
        background-color: $white;
        font-size: 1.3rem;
        width: 95%;
        border: none;
        border-radius: 0;
        padding: 8px 16px;
      }

      .send-button {
        background-color: $white;
        width: 5%;
        display: flex;
        justify-content: center;
        align-items: center;
        a {
          display: flex;
          justify-content: center;
          align-items: center;
          width: 100%;
          font-size: 1.7rem;
          color: $black;
          &:hover {
            text-decoration: none;
          }
        }
      }
    }
  }
}

.event-banner {
  width: 75%;
  height: 60vh;
  background-size: cover;
  background-color: gray;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
}

